fix: 2up product grid on mobile

--- a/src/assets/styles/sections/product-grid.scss
+++ b/src/assets/styles/sections/product-grid.scss
@@ -6,11 +6,13 @@
     flex-wrap: wrap;
     .product-grid-item {
       flex: 0 0 32%;
-      min-width: 250px;
+      min-width: 150px;
+      max-width: 330px;
     }
     @supports (display: grid) {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+      justify-content: flex-start;
+      grid-template-columns: repeat(auto-fit, minmax(130px, auto));
       grid-gap: 20px 40px;
     }
   }
